[package]
name = "ruuid4"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruuid4"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
uuid = { version = "1.18.1", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8", "fast-rng"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
